tests/NormalTests/paczka1/fuzzy1/68851092.err
Error in line 1: oehftJ S895 51,5
Error in line 4: oehftJ A180 4,7
Error in line 6: oehftJ S895 12,0
Error in line 27: FQ5sDcC S895 14,2
Error in line 36: S774 S774 286,70
Error in line 31: FQ5sDcC S774 59,2
